AUI-1 - Prevent wrapping on buttons
git-svn-id: svn://svn.liferay.com/repos/public/alloy/trunk@48769 05bdf26c-840f-0410-9ced-eb539d925f36

--- a/src/aui-button/assets/aui-button-core.css
+++ b/src/aui-button/assets/aui-button-core.css
@@ -6,7 +6,8 @@
 }
 
 .aui-button-icon-label {
-	padding-bottom: 1px
+	padding-bottom: 1px;
+	white-space: nowrap;
 }
 
 .aui-button-icon {
